# scrapy-playwright

./: .bumpversion.cfg  .gitignore  Makefile  README.md  changelog.md  pylintrc  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  tox.ini
.github/workflows/: checks.yml  main.yml  publish.yml  scrapy-unreleased.yml  tests.yml
benchmarks/: benchmark.py
docs/: changelog.md  faq.md
examples/: books.py  books_abort_route.py  books_block_requests.py  contexts.py  cookies.py  devtools.py  download.py  events.py  exception.py  exception_errback.py  exception_middleware.py  headers.py  init_page.py  max_pages.py  persistent_context.py  post.py  remote.py  scroll.py  storage.py
scrapy_playwright/: __init__.py  _loop.py  _utils.py  extensions.py  handler.py  headers.py  memusage.py  page.py  utils.py
tests/: __init__.py  conftest.py  launch_browser_server.js  launch_chromium_server.js  mockserver.py  requirements.txt  test_browser_contexts.py  test_encoding.py  test_headers.py  test_misc.py  test_mixed_requests.py  test_page_coroutines.py  test_page_methods.py  test_playwright_requests.py  test_utils.py
tests/site/: gallery.html  index.html  lorem_ipsum.html  redirect.html  scroll.html
tests/site/data/: quotes1.json  quotes2.json  quotes3.json
tests/site/static/: bootstrap.min.css  main.css
tests/tests_asyncio/: test_browser.py  test_browser_contexts.py  test_extensions.py  test_headers.py  test_page_methods.py  test_playwright_requests.py  test_remote.py  test_settings.py  test_spiders.py  test_threaded_loop.py  test_utils.py
tests/tests_twisted/: test_mixed_requests.py
